# mai_pico

./: .gitignore  .gitmodules  README.md  README_CN.md
PCB/Button/: fp-info-cache  fp-lib-table  mai_button.kicad_pcb  mai_button.kicad_prl  mai_button.kicad_pro  mai_button.kicad_sch  mai_button.kicad_sym  sym-lib-table
PCB/Button/3dmodels/: Credit Button Assy (Groovy).step  Magnetic Pogo Connector 5 Pin (Type 4).STEP  Part Studio - pcb.step  User Library-PTS645SL95SMTR92-LFS.STEP  WS2812-0807.STEP  WS2812-2020.STEP  iidx_keycap_main_step.stp  iidx_keycap_teeny.wrl  mpr121_breakout_v13.stl
PCB/Button/RP_Silicon_KiCad/: Install.md  LICENSE
PCB/Button/RP_Silicon_KiCad/KiCadLibraries/: MCU_RaspberryPi_and_Boards.lib
PCB/Button/mai_button.pretty/: ChuAcrylic.kicad_mod  ChuKey.kicad_mod  ChuKeyScrews.kicad_mod  EVQP1K05M.kicad_mod  GP2Y0E03.kicad_mod  GP2Y0E03_REAL.kicad_mod  Hole2.5.kicad_mod  Hole4.0.kicad_mod  MPR121_BOARD.kicad_mod  MountingHole_3.2mm_M3.kicad_mod  RPi_Pico_SMD_Pins.kicad_mod  RPi_Pico_SMD_Pins_Strip.kicad_mod  SOT-23-5_Jumper.kicad_mod  SW_Kailh_Choc_V1V2_1.00u_LED.kicad_mod  SW_Kailh_Choc_V1V2_IIDX.kicad_mod  SW_Kailh_Choc_V1V2_IIDX_MX_Stab.kicad_mod  Solder_1P.kicad_mod  Solder_2P.kicad_mod  Solder_3P.kicad_mod  Solder_4P.kicad_mod  Solder_5P.kicad_mod  WS2812B-1615.kicad_mod  WS2812B-2835.kicad_mod  WS2812B-4020.kicad_mod  mai_pcb.kicad_mod
PCB/IO/: fp-info-cache  fp-lib-table  mai_io.kicad_pcb  mai_io.kicad_prl  mai_io.kicad_pro  mai_io.kicad_sch  mai_io.kicad_sym  sym-lib-table
PCB/IO/3dmodels/: EVQ-P1D05M.stp  ImageToStl.com_mpr121_breakout_v13.wrl  J 2835.step  Kailh LP Choc PC Keycap.step  Magnetic Pogo Connector 5 Pin (Type 1).STEP  Magnetic Pogo Connector 5 Pin (Type 2).STEP  Magnetic Pogo Connector 5 Pin (Type 3).STEP  User Library-WS2812-2020.step  User Library-WS2812-4020.step  User Library-pj-393-8.STEP  WS2812B.step
PCB/IO/RP_Silicon_KiCad/: .gitignore  README.md
PCB/IO/RP_Silicon_KiCad/KiCadLibraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
PCB/IO/Type-C.pretty/: HRO-TYPE-C-31-M-12-Assembly.kicad_mod
PCB/IO/mai_io.pretty/: MPR121_BOARD.kicad_mod  MaiTouch_Conn34.kicad_mod  PJ393-8P.kicad_mod  Pogo_5P_Female.kicad_mod  RPi_Pico_SMD_Pins.kicad_mod  SW_Kailh_Choc_V1V2_1.00u_LED.kicad_mod  Solder_3P.kicad_mod  Solder_5P.kicad_mod  WS2812B-1615.kicad_mod  WS2812B-2835.kicad_mod
Production/3DPrint/: mai_cover.stl  mai_link.stl
Production/firmware/: mai_pico.uf2  mai_pico_max_sense_test.uf2
cad/: maimai_touch v11.bak  maimai_touch v11.dwg  maimai_touch v2.dwg  maimai_touch v26.dwg  maimai_touch v45.dwg  maimai_touch v47.dwg  maimai_touch v5.dxf  maimai_touch v50.dwg  maimai_touch v52.bak  maimai_touch v52.dwg  maimai_touch v53.bak  maimai_touch v53.dwg  maimai_touch v8.dxf  maimai_touch v9.bak  maimai_touch v9.dwg  maimai_touch.dxf
doc/: web_serial.html
firmware/: .gitignore  CMakeLists.txt  README.md  mai_pico.uf2
firmware/lib/pico-mpr121/: CMakeLists.txt  mpr121.c
firmware/lib/pico-mpr121/include/: mpr121.h
firmware/mai2/mai2io/: config.c  config.h  mai2io.c  mai2io.def  mai2io.h  meson.build
firmware/src/: CMakeLists.txt  board_defs.h  button.c  button.h  buttons.c  buttons.h  cli.c  cli.h  cmd.c  cmd.h  commands.c  commands.h  config.c  config.h  hid.c  hid.h  io.c  io.h  mai_pico.code-workspace  main.c  mpr121.c  mpr121.h  rgb.c  rgb.h  save.c  save.h  setup.c  setup.h  touch.c  touch.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
